# pennyserv-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml
alembic/: env.py
alembic/versions/: 20260608_0001_initial_pennyserv_schema.py
docs/: data-platform-boundary.md  database-schema.md
src/: main.py
src/auth/application/: services.py
src/auth/domain/: entities.py
src/auth/infrastructure/: repositories.py
src/basket/application/: services.py
src/basket/domain/: entities.py  repositories.py
src/basket/infrastructure/: repositories.py
src/basket/presentation/: router.py
src/caching/application/: services.py
src/caching/infrastructure/: redis_client.py
src/catalog/application/: services.py
src/catalog/domain/: entities.py  repositories.py
src/catalog/infrastructure/: repositories.py
src/core/: config.py  exceptions.py  logging.py
src/core/api/: health.py  router.py
src/core/db/: __init__.py  models.py  session.py
src/core/middleware/: request_id.py
src/integrations/data_platform/: adapters.py  client.py  contracts.py
src/jobs/application/: services.py
src/jobs/infrastructure/: scheduler.py
src/normalization_quality/application/: services.py
src/normalization_quality/domain/: entities.py
src/normalization_quality/infrastructure/: repositories.py
src/normalization_quality/presentation/: router.py
src/observability/application/: health_service.py
src/observability/presentation/: router.py
tests/: test_health.py  test_startup.py
(+26 files in other folders)
