[project]
name = "pennyserv-api"
version = "0.1.0"
description = "PennyServ backend API built with FastAPI and Clean Architecture."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "alembic>=1.14.0,<2.0.0",
  "psycopg[binary]>=3.2.3,<4.0.0",
  "pydantic>=2.10.3,<3.0.0",
  "pydantic-settings>=2.7.0,<3.0.0",
  "openai>=1.58.1,<2.0.0",
  "pgvector>=0.3.6,<1.0.0",
  "redis>=5.2.1,<6.0.0",
  "python-json-logger>=2.0.7,<3.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4,<9.0.0",
  "pytest-cov>=6.0.0,<7.0.0",
  "httpx>=0.28.1,<1.0.0",
  "ruff>=0.8.4,<1.0.0",
  "mypy>=1.13.0,<2.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q --disable-warnings --maxfail=1"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
